# pacto-bot-api

./: .clippy.toml  .dockerignore  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CONCEPTS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SDK_USABILITY_IMPROVEMENTS_SUMMARY.md  STRATEGY.md  build.rs  clippy.toml  deny.toml  pacto-bot-api.toml.example
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/governance-bot/: Cargo.toml  README.md
crates/governance-bot/src/: bot.rs  config.rs  daemon_client.rs  lib.rs  main.rs
crates/governance-bot/src/evm/: addresses.rs  bindings.rs  mod.rs  reader.rs  snapshot.rs
crates/governance-bot/src/snapshot/: format.rs  mod.rs
crates/governance-bot/tests/: evm_reader.rs
crates/pacto-bot-utils/: Cargo.toml
crates/pacto-bot-utils/src/: cli.rs  main.rs  mls.rs  relay.rs  state.rs  welcome.rs
docs/: 2026-07-01-nostrbotkit-adoption-handoff-prompt.md  BEADS_WORKFLOW.md  GETTING_STARTED.md  bot-squad-join-flow.excalidraw  dev-env.md  generate_diagram.py  key-and-secret-security.md  pacto-bot-admin-llms.txt  pacto-bot-architecture-deep-dive-2.md  pacto-bot-architecture-deep-dive.md  python-sdk-squad-bots.md  python-sdk.md  security-overview.md  tee-private-agent-architecture.md  telegram-bot-architecture-deep-dive.md
docs/brainstorms/: 2026-06-28-python-examples-ci-contract-tests-requirements.md  2026-06-29-admin-cli-help-and-llm-guide-requirements.md  2026-06-29-generated-python-client-requirements.md  2026-06-29-python-sdk-seed-requirements.md  2026-07-01-nostrbotkit-adoption-brainstorm.md  2026-07-02-sdk-reconnection-resilience-requirements.md  2026-07-02-sdk-template-decoupling-requirements.md  2026-07-03-pacto-tee-bot-hackathon-requirements.md  2026-07-03-pacto-tee-bot-hackathon-review-questions.md  2026-07-08-u12-inbound-mls-snapshot-requirements.md  2026-07-09-create-mls-group-daemon-requirements.md  2026-07-20-bot-mentions-in-squad-channels-requirements.md  2026-07-20-openclaw-channel-requirements.md
docs/diagrams/: README.md  pacto-bot-api-big-picture-cartoon.excalidraw  pacto-bot-api-big-picture.excalidraw  pacto-bot-api-bot-identity.excalidraw  pacto-bot-api-handler-to-daemon.excalidraw  pacto-bot-api-message-flow.excalidraw  pacto-bot-api-security-model.excalidraw
docs/ideation/: 2026-06-28-automated-behavior-tests-ideation.html  2026-07-02-sdk-template-decoupling-ideation.html
docs/plans/: 2026-06-24-001-feat-pacto-bot-api-daemon-executive-summary.md  2026-06-24-001-feat-pacto-bot-api-daemon-plan.md  2026-06-24-001-security-review-findings.md  2026-06-28-001-feat-python-examples-ci-contract-tests-plan.md  2026-06-29-001-feat-admin-cli-help-and-llm-guide-plan.md  2026-06-29-002-feat-python-sdk-seed-plan.md  2026-06-29-003-feat-generated-python-client-plan.md  2026-06-30-001-feat-bot-scaffold-plan.md  2026-07-02-001-feat-sdk-reconnection-resilience-plan.md  2026-07-02-002-feat-sdk-template-decoupling-plan.md  2026-07-03-001-feat-governance-snapshot-mls-tee-bot-plan.md  2026-07-03-001-governance-snapshot-bot-product-brief.md  2026-07-07-001-feat-pacto-integration-hardening-plan.md  2026-07-08-001-feat-inbound-mls-snapshot-plan.md  2026-07-08-002-feat-sdk-usability-recommendations-plan.md  2026-07-09-001-feat-daemon-backed-mls-group-admin-plan.md  2026-07-20-001-feat-bot-mentions-in-squad-channels-plan.md  2026-07-20-001-feat-openclaw-pacto-channel-plan.md
docs/research/: mls-key-custody-vault-vs-tee.md  nostrbotkit-comparison.md  nostrbotkit-features-deep-dive.md
examples/: README.md  conftest.py  greeting_bot.manifest.json  greeting_bot.py  pacto_sdk.py  requirements.txt  test_echo_bot.py  test_greeting_bot_http.py
migrations/: V1__baseline.sql  V2__mls_groups_wire_id_per_bot.sql
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: greeting_bot.py  joke_bot.py
python/scripts/: generate.py
python/src/pacto_bot_api/: bot.py  transports.py
python/src/pacto_bot_api/_generated/: client.py  models.py
python/src/pacto_bot_sdk/: __init__.py  bot.py  logger.py  parser.py  retry_circuit.py  transports.py  validate.py
python/src/pacto_bot_sdk/_generated/: __init__.py  client.py  models.py
python/tests/: conftest.py  test_bot.py  test_client.py  test_examples_contract.py  test_generated_models.py  test_generator.py  test_manifest_validation.py  test_retry_circuit.py  test_transports.py  test_validate.py
requirements/: coverage.json  report.json  report.md
schemas/: config.json  jsonrpc.json  metrics.json  service-compatibility-data.json  service-compatibility.json  version.json
scripts/: generate_requirement_coverage.py  install.sh  package-release.sh  pre-commit.sh  prep-release.sh  version_bump.py
src/: admin.rs  bot_state.rs  client_manager.rs  config.rs  config_generated.rs  db.rs  dev_env_probe.rs  diagnostics.rs  dispatch.rs  errors.rs  events.rs  guide.rs  handlers.rs  lib.rs  main.rs  metrics_generated.rs  mls.rs  mls_path.rs  nip46.rs  nostr.rs  signer.rs  version.rs
src/scaffold/: cache.rs  core_path_tests.rs  diff.rs  generate.rs  lock.rs  merge.rs  mod.rs  render.rs  resolve.rs  safety.rs  template.rs  update.rs
tests/: admin_cli_bunker.rs  admin_cli_creation.rs  admin_cli_help.rs  admin_cli_llms_txt_sync.rs  admin_cli_migration.rs  admin_cli_observability.rs  admin_cli_scaffold.rs  admin_cli_status.rs  admin_cli_update.rs  agent_event.rs  bot_state_health.rs  cli_args.rs  client_manager_health.rs  daemon_shutdown.rs  daemon_startup.rs  db_corruption.rs  dev_env.rs  dev_env_probe.rs  diagnostics.rs  dispatch_integration.rs  example_http_handler.rs  example_multi_bot.rs  integration_test.rs  metrics_response_schema.rs  mls_group.rs  mls_inbound.rs  mls_send_only.rs  mls_startup_reconciliation.rs  mls_welcome_dispatch.rs  multi_bot.rs  nostr_client.rs  schema_sync.rs  secret_redaction.rs  sighup_token_reload.rs  transport_http.rs  transport_unix.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  coverage.rs  dev_env_probe.rs  docs.rs  main.rs  secret_lint.rs
(+39 files in other folders)
