[package]
name = "pacto-bot-api"
version = "0.6.0"
edition = "2024"
authors = ["Pacto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/covenant-gov/pacto-bot-api"
description = "Standalone daemon that multiplexes Pacto bot identities over JSON-RPC"
rust-version = "1.96"

[[bin]]
name = "pacto-bot-api"
path = "src/main.rs"

[[bin]]
name = "pacto-bot-admin"
path = "src/admin.rs"

[workspace]
members = [".", "xtask", "crates/governance-bot"]
resolver = "3"

[dependencies]
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
axum = "0.8"
nostr-sdk = { version = "0.43", features = ["nip06", "nip44", "nip59"] }
nostr = { version = "0.43", features = ["nip46", "nip44", "nip59"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.10", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.26"
hex = "0.4"
bech32 = "0.12"
subtle = "2"
fs2 = "0.4"
nostr-connect = "0.43"
nostr-relay-pool = "0.43"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
percent-encoding = "2"
semver = "1"
dirs = "6"
colored = "2"
nix = { version = "0.31", features = ["signal", "process"] }
    rpassword = "7.5.4"
jsonschema = "0.46"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "fileapi", "handleapi", "processthreadsapi", "securitybaseapi"] }

[dev-dependencies]
schemars = "0.8"
jsonschema = "0.46"
proptest = "1"
assert_cmd = "2"
predicates = "3"
parking_lot = "0.12"
tokio = { version = "1", features = ["test-util"] }
tokio-tungstenite = "0.26"
futures = "0.3"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Production safety: panics and unwrap/expect are forbidden outside tests.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Secret-hygiene: placeholder identifiers for sensitive values are forbidden.
disallowed_names = "deny"
# Avoid debug macro leakage.
dbg_macro = "warn"
