[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pacto-bot-sdk"
version = "0.3.0"
description = "Generated Python SDK for the pacto-bot-api daemon"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "websockets>=13.0",
    "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pacto_bot_sdk"]
editable-mode = "lenient"

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "tests",
    "scripts",
    "skills",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
