[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
pacto-bot-api = { path = ".." }
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
