[package]
name = "governance-bot"
version = "0.1.0"
edition = "2024"
authors = ["Pacto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/covenant-gov/pacto-bot-api"
description = "Example on-chain governance reader for Pacto snapshot bot."
rust-version = "1.96"

[dependencies]
alloy = { version = "1.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
disallowed_names = "deny"
dbg_macro = "warn"
