[package]
name = "pacto-bot-utils"
version = "0.1.0"
edition = "2024"
authors = ["Pacto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/covenant-gov/pacto-bot-api"
description = "Headless utilities for Pacto bot development."
rust-version = "1.96"

[[bin]]
name = "create-mls-group"
path = "src/main.rs"

[dependencies]
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
nostr-sdk = { version = "0.43", features = ["nip06", "nip44", "nip59"] }
nostr = { version = "0.43", features = ["nip46", "nip44", "nip59"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
getrandom = "0.2"

[dev-dependencies]
futures = "0.3"
tokio-tungstenite = "0.26"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
disallowed_names = "deny"
dbg_macro = "warn"
